--- a/style.css
+++ b/style.css
@@ -41,6 +41,9 @@ body{
     border-radius: 0.8rem;
     box-shadow: 0 2px 2px 1px  rgb(59, 58, 58) ;
 }
+.try p{
+    line-height: 22px;
+}
 .try p span{
      display: block;
 }
@@ -88,6 +91,12 @@ body{
     color: white;
     font-size: 13px;
     font-weight: bold;
+}
+#bot:hover{
+   color: cyan;
+   background-color: rgb(52, 52, 128);
+   animation: 2s;
+   transform: rotatex(360deg);
 }
 .arg{
     height: 7vh;
